...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GSt-PT-teG">
                                            <rect key="frame" x="0.0" y="0.0" width="28" height="28"/>
                                            <state key="normal" image="lightbulb"/>
                                        </button>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ikN-fl-PLW">
...
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="Recent Articles" id="HYA-yA-UL6">
                        <barButtonItem key="backBarButtonItem" title="Back" id="H5J-j7-XOX"/>
                        <barButtonItem key="rightBarButtonItem" image="settings" style="plain" id="VCf-6o-sSW">
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Settings" id="6sF-c2-bfi">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="al9-Z9-G6X">
                            <connections>
...
            <objects>
                <navigationController title="Legal Wiki Navigation" automaticallyAdjustsScrollViewInsets="NO" id="Kog-7l-hXq" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Legal Wikipedia" image="book" id="acW-dT-cKf"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ztc-2Q-8Kv">
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9fu-ly-heF" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Lawyers" image="contact-outline" id="cPa-gy-q4n"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4BY-Ia-hZe">
...
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Craigs Firm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zI9-Fo-7Ww">
                                            <rect key="frame" x="82" y="11" width="351" height="40"/>
                                            <constraints>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ytW-89-PNF">
                                                <rect key="frame" x="564" y="0.0" width="28" height="28"/>
                                                <accessibility key="accessibilityConfiguration" identifier="close"/>
                                                <state key="normal" image="close"/>
                                                <connections>
...
