...
    var updateSize: CGSize!
    
    let rootRef = Firebase(url: "https://lawhubaus.firebaseio.com/")
    var articleRef: Firebase!
    var models:Array<ArticleModel> = []
    
    let didYouKnow = "Did You Know?"
    let RandomFactsArray = ["In Australia, bars are required to stable, water and feed the horses of their patrons", "In Victoria, it is illegal to change a light bulb unless you are a qualified electrician", "You may never leave your car keys in an unattended vehicle"]

    override func viewDidLoad() {
        super.viewDidLoad()
        
        //set firebase references
...
